# Loan_API_ML_Project

./: .gitignore  Dockerfile  LICENSE  ModelTraining.ipynb  Pipfile  README.md  pyproject.toml  run_api.bat
EDA and test script/: DataExploration.ipynb  ModelCreater.py
EDA and test script/.ipynb_checkpoints/: DataExploration-checkpoint.ipynb
EDA and test script/mlruns/0/1108354db0934c729c4a66d3b875d6ea/metrics/: roc_auc_score
EDA and test script/mlruns/0/1108354db0934c729c4a66d3b875d6ea/tags/: mlflow.runName  mlflow.source.git.commit
EDA and test script/mlruns/0/223bd81de34b4f80adae327f649f8833/artifacts/: estimator.html
EDA and test script/mlruns/0/24a3277fb29a4b45a40021875cb2e951/tags/: mlflow.runName
EDA and test script/mlruns/0/4e126f37fb4a40fcb5455e004726522e/: meta.yaml
EDA and test script/mlruns/0/4f5aaddaf05e498e8874ca9c5972959f/: meta.yaml
EDA and test script/mlruns/0/67d202e8862646b6ab0d29c0241f8852/: meta.yaml
EDA and test script/mlruns/0/854efdfea530481c9704f040a151e431/: meta.yaml
EDA and test script/mlruns/0/885d30210dd44546813326a9d5035c76/: meta.yaml
EDA and test script/mlruns/0/da48b4a0ebdf4b0d9619c6e52399c473/: meta.yaml
EDA and test script/mlruns/0/e6c4a697f8354d5f88827ef8182fc4d0/: meta.yaml
src/API/: main.py
src/API/html/: index.html  loan_prediction.html  main.html  result.html
src/EDA and test script/: DataExploration.py  ModelPred.ipynb
src/api/: main.py
src/predictionModel1/: DataExploration.ipynb  ModelPred.py  ModelTraining.ipynb
src/predictionModel1/mlruns/0/: meta.yaml
src/predictionModels/: ModelPred.py
(+222 files in other folders)
